# AgentsPlex

./: <none>  ARCHITECTURE.md  README.md  UI_Mockups.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/specs/: my_agent.yaml
codeforge/: __init__.py  cli.py  config.py  consensus.py  formatter.py  github_client.py  models.py  orchestrator.py  reviewer.py
config/: config_manager.py
docs/: AGENT_INTEGRATION_GUIDE.md  ai-reviewer-architecture.md  review_agent_api.md
docs/api/: review_agent_api.md
frontend/src/components/: ReviewDashboard.tsx  ReviewResults.tsx
src/reporting/: report_formatter.py
tests/: test_consensus.py  test_correctness_agent.py  test_formatter.py  test_github_client.py  test_models.py  test_orchestrator.py  test_reviewer.py
tests/integration/: test_review_agents_integration.py
ui/: review_results.html
