# pyproject.toml
[project]
name = "codeforge-review"
version = "0.1.0"
dependencies = [
    "click",
    "requests",
    "openai",
    "anthropic",
    "pyyaml",
]

[project.scripts]
codeforge = "codeforge.cli:main"

[tool.pytest]
addopts = "--maxfail=1 --disable-warnings -q"

[tool.black]
line-length = 88
skip-string-normalization = true